--- a/2206.html
+++ b/2206.html
@@ -5,9 +5,42 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>doc</title>
+    <title>мой документ</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1> заголовок 1</h1>
+  <h1>Пикник на обочине</h1>
+  <p class="paragraph-1"> Гипотеза о Боге, например, дает ни с чем не сравнимую возможность абсолютно все понять,
+    абсолютно ничего не узнавая… Дайте человеку крайне упрощенную систему мира и толкуйте всякое событие на
+    базе этой упрощенной модели. Такой подход не требует никаких знаний.</p>
+  <p class="paragraph-2">Странное дело, почему это нам нравится, когда нас хвалят? Денег от этого не прибавится.
+    Славы? Какая у нас может быть слава?
+    «Он прославился: теперь о нем знали трое». Ну, скажем, четверо, если считать Бейлиса.
+    Забавное существо человек!… Похоже, мы любим похвалу как таковую. Как детишки мороженое. И очень глупо.
+    Как я могу подняться в собственных глазах? Что, я сам себя не знаю? Старого толстого Ричарда Г. Нунана?
+    А кстати, что такое это «Г»? Вот тебе и на! И спросить не у кого… Не у господина же Лемхена спрашивать…
+    А, вспомнил! Герберт. Ричард Герберт Нунан. Ну и льет!</p>
+  <p class="paragraph-3"> Вся беда в том, что мы не замечаем, как проходят годы, думал он.
+    Плевать на годы, мы не замечаем, как все меняется. Мы знаем, что все меняется, нас с детства учат,
+    что все меняется, мы много раз видели своими глазами, как все меняется, и в то же время мы совершенно не способны заметить тот момент,
+    когда происходит изменение, или ищем изменение не там, где следовало бы.</p>
+  <span>Все мы в каком-то смысле пещерные люди – ничего страшнее призрака или вурдалака представить себе не можем.
+    А между тем нарушение принципа причинности – гораздо более страшная вещь,
+    чем целые стада привидений...</span>
+  <span>Все мы в каком-то смысле пещерные люди – ничего страшнее призрака или вурдалака представить себе не можем.
+    А между тем нарушение принципа причинности – гораздо более страшная вещь,
+    чем целые стада привидений...</span>
+  <h3> Еще произведения братьев Стругацких-></h3>
+  <ul>
+    <li> страна багровых туч </li>
+    <li> за миллиард лет до конца света</li>
+    <li> трудно быть богом</li>
+  </ul>
+  <ol>
+    <li> страна багровых туч </li>
+    <li> за миллиард лет до конца света</li>
+    <li> трудно быть богом</li>
+  </ol>
+  <img src="img1.png" hspace="70" alt="ковбой">
 </body>
 </html>
