--- a/2206.html
+++ b/2206.html
@@ -24,6 +24,7 @@
     Плевать на годы, мы не замечаем, как все меняется. Мы знаем, что все меняется, нас с детства учат,
     что все меняется, мы много раз видели своими глазами, как все меняется, и в то же время мы совершенно не способны заметить тот момент,
     когда происходит изменение, или ищем изменение не там, где следовало бы.</p>
+  <p class="paragraph-4"; align="center">Разум есть способность использовать силы окружающего мира без разрушения этого мира.</p>
   <span>Все мы в каком-то смысле пещерные люди – ничего страшнее призрака или вурдалака представить себе не можем.
     А между тем нарушение принципа причинности – гораздо более страшная вещь,
     чем целые стада привидений...</span>
